bk_ida/gccida/c2/c_finish_else
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/c_finish_else/src/c-common.c:822:11: error: use of undeclared identifier 'if_stack_0'; did you mean 'if_stack'?
if_stmt = if_stack_0[if_stack_pointer - 1].if_stmt; 
          ^~~~~~~~~~
          if_stack
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/c_finish_else/src/c-common.c:262:16: note: 'if_stack' declared here
static if_elt *if_stack;
               ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/c_finish_else/src/obj/c-common.o] Error 1
